--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ionic cap sync",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "run": "ionic cap run android --target RXCX20E11XH ",
+    "emulator": "ionic cap run android --target Medium_Phone_API_35"
   },
   "private": true,
   "dependencies": {
@@ -21,12 +23,15 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@capacitor-community/camera-preview": "^7.0.1",
     "@capacitor-community/image-to-text": "^7.0.0",
     "@capacitor/android": "7.1.0",
     "@capacitor/app": "7.0.0",
     "@capacitor/camera": "^7.0.0",
     "@capacitor/core": "7.1.0",
+    "@capacitor/filesystem": "^7.0.1",
     "@capacitor/haptics": "7.0.0",
+    "@capacitor/ios": "7.1.0",
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/status-bar": "7.0.0",
     "@ionic/angular": "^8.0.0",
